<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:minWidth="175dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_classes"
        android:paddingBottom="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name_bard"
        android:checked="true"
        android:id="@+id/checkbox_filter_bard" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_cleric"
        android:id="@+id/checkbox_filter_cleric" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_druid"
        android:id="@+id/checkbox_filter_druid" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_ranger"
        android:id="@+id/checkbox_filter_ranger" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_paladin"
        android:id="@+id/checkbox_filter_paladin" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_wizard"
        android:id="@+id/checkbox_filter_wizard" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_warlock"
        android:id="@+id/checkbox_filter_warlock" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/class_name_sorcerer"
        android:id="@+id/checkbox_filter_sorcerer" />

</LinearLayout>